--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,3 +115,34 @@ main {
   font-size: 70px;
   text-align: center;
 }
+
+.main-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+
+}
+
+.cronometro-container {
+  height: 40%;
+  
+}
+
+.cronometro-display {
+  font-size: 70px;
+  text-align: center;
+}
+
+.btn-container {
+  height: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.btn-container button {
+  margin: 0 7px;
+  padding: 2px 7px;
+  
+}
