--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,3 +146,19 @@ main {
   padding: 2px 7px;
   
 }
+
+.blink {
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: visible;
+    
+  }
+}
